# materialxusd

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: static.yml
documents/: Doxyfile  doxygen_warnings.txt  footer.html  header.html
documents/html/: ____init_____8py_source.html  ____main_____8py_source.html  _material_x_downloader_8py.html  _material_x_downloader_8py.js  _material_x_downloader_8py_source.html  annotated.html  annotated_dup.js  classes.html  classmaterialxusd_1_1_materialx_u_s_d_converter-members.html  classmaterialxusd_1_1_materialx_u_s_d_converter.html  classmaterialxusd_1_1_materialx_u_s_d_converter.js  classmaterialxusd_1_1materialxusd_1_1_materialx_u_s_d_converter-members.html  classmaterialxusd_1_1materialxusd_1_1_materialx_u_s_d_converter.html  (+62 more)
source/: __init__.py
tests/: convert_rts.sh  create_summary.sh  glsl_vs_glslfx.html  glsl_vs_osl_glslfx.html  render_examples.sh  render_rts.sh  render_rts_1_39_3.sh  run_examples.sh  run_pb.sh  show_rts.sh  unit_test_gallery.html  unit_test_gallery_internal.html  usd_mtlx_image_gallery.html  usd_mtlx_image_gallery_internal.html  usd_physicallY_based_gallery_internal.html  usd_physically_based_gallery.html  usd_render_gallery.html  x.html
tests/data/: camera.usd  (+4 more)
utilities/: build_docs.sh  concat_images.py  create_image_path.py  footer.html  mdhtml.py  navigation.html  tests_to_html.py
utilities_internal/: create_image_path.py  example_render.sh  render_gl.py  setupUSD.sh  testrendersettings.usda  tests_to_html.py  usd_camera.py  usd_setup.sh  usdrender.py  usdview_render.py
(+1172 files in other folders)
